# simple-loan-calculator

./: .gitignore  Cargo.toml  README.md  index.html
src/: components.rs  fin_math.rs  main.rs  utils.rs
