[package]
name = "simple-loan-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.3", features = ["csr", "nightly"] }
wasm-bindgen = "0.2.90"
web-sys = "0.3.67"
